[gd_scene load_steps=17 format=3 uid="uid://ctplc4f1aohkr"]

[ext_resource type="Script" path="res://scenes/character/character.gd" id="1_hkjev"]
[ext_resource type="Script" path="res://scenes/character/state_machine/player_state_machine.gd" id="2_yo7e0"]
[ext_resource type="Script" path="res://scenes/character/states/idle_player_state.gd" id="3_a2qjr"]
[ext_resource type="Script" path="res://scenes/character/states/walking_player_state.gd" id="4_2w4er"]
[ext_resource type="Script" path="res://scenes/character/states/crouching_player_state.gd" id="5_qns0o"]
[ext_resource type="Script" path="res://scenes/character/states/sprinting_player_state.gd" id="6_m8upy"]
[ext_resource type="Script" path="res://scenes/character/states/in_air_player_state.gd" id="7_shgh1"]
[ext_resource type="Script" path="res://scenes/character/states/jumping_player_state.gd" id="8_tol1r"]
[ext_resource type="Script" path="res://scenes/character/states/landing_player_state.gd" id="9_n0gvb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0ix3l"]
radius = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wbr05"]
albedo_color = Color(1, 0, 0, 1)
metallic = 0.5
roughness = 0.42

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2c71m"]
material = SubResource("StandardMaterial3D_wbr05")
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1t2vc"]
radius = 0.4
height = 1.4

[sub_resource type="Animation" id="Animation_pp0ev"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision/PlaceholderMesh:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7, 0)]
}

[sub_resource type="Animation" id="Animation_p3aax"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [2.0, 1.4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision/PlaceholderMesh:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [2.0, 1.4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.7, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 1.7, 0), Vector3(0, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_71qlh"]
_data = {
"RESET": SubResource("Animation_pp0ev"),
"crouch": SubResource("Animation_p3aax")
}

[node name="Character" type="CharacterBody3D" node_paths=PackedStringArray("head")]
collision_layer = 2
script = ExtResource("1_hkjev")
head = NodePath("Head")
mouse_sensitivity = 0.15
max_look_down = 70.0
max_look_up = 89.0

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0ix3l")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="Collision"]
mesh = SubResource("CapsuleMesh_2c71m")
skeleton = NodePath("../..")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera" type="Camera3D" parent="Head"]

[node name="CrouchCheck" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
shape = SubResource("CapsuleShape3D_1t2vc")
target_position = Vector3(0, 0, 0)
max_results = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_71qlh")
}

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_player", "crouch_check", "current_state")]
script = ExtResource("2_yo7e0")
character = NodePath("..")
animation_player = NodePath("../AnimationPlayer")
crouch_check = NodePath("../CrouchCheck")
current_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("state_machine")]
script = ExtResource("3_a2qjr")
state_machine = NodePath("..")
speed = 5.0
acceleration = 7.0
deceleration = 7.0

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("state_machine")]
script = ExtResource("4_2w4er")
state_machine = NodePath("..")
speed = 5.0
acceleration = 7.0
deceleration = 7.0

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("state_machine")]
script = ExtResource("5_qns0o")
state_machine = NodePath("..")
speed = 3.0
acceleration = 7.0
deceleration = 7.0
crouch_anim_speed = 3.0

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("state_machine")]
script = ExtResource("6_m8upy")
state_machine = NodePath("..")
speed = 8.0
acceleration = 7.0
deceleration = 7.0

[node name="InAirPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("state_machine")]
script = ExtResource("7_shgh1")
state_machine = NodePath("..")
cap = 0.15
speed = 30.0
acceleration = 20.0

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("state_machine")]
script = ExtResource("8_tol1r")
state_machine = NodePath("..")
cap = 0.15
speed = 30.0
acceleration = 20.0
jump_strenght = 3.5

[node name="LandingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("state_machine")]
script = ExtResource("9_n0gvb")
state_machine = NodePath("..")
